# saphari_final_review

./: .gitignore  README.md
saphari_final_review/: CMakeLists.txt  package.xml
saphari_final_review/rosinstall/: saphari_catkin.rosinstall  saphari_knowrob.rosinstall  saphari_rosbuild.rosinstall
saphari_interactive_markers/: CMakeLists.txt  package.xml
saphari_interactive_markers/launch/: saphari_interactive_markers.launch
saphari_interactive_markers/src/: saphari-interactive-markers.asd
saphari_interactive_markers/src/saphari-interactive-markers/: main.lisp  package.lisp
saphari_interactive_markers/src/saphari_interactive_markers/: main.cpp
saphari_kinect_server/: .gitignore  CMakeLists.txt  SamplesConfig.xml  catkin.cmake  kinect_nodelet_plugins.xml  lib  mainpage.dox  manifest.xml  package.xml
saphari_kinect_server/cmake/: FindNite.cmake
saphari_kinect_server/include/: SamplesConfig.xml
saphari_kinect_server/include/saphari_kinect_server/: driver.h  kinect_nodelet.h  user_tracker.h
saphari_kinect_server/launch/: all_tracker_filtered.launch  calibration.launch  dual_kinect_server.launch  kinect_server.launch  real_tracker_filtered.launch  tracker_filtered.launch  urdf_filter.launch
saphari_kinect_server/src/: driver.cpp  kinect_node.cpp  kinect_nodelet.cpp  user_tracker.cpp
saphari_robot_bringup/: CMakeLists.txt  package.xml  sim.rviz
saphari_robot_bringup/config/: gripper_vel.yaml  semrec_config.cfg
saphari_robot_bringup/launch/: beasty.launch  gripper.launch  gripper_real.launch  gripper_sim.launch  human_perception.launch  human_perception_sim.launch  knowledge_base.launch  real_robot.launch  robot.launch  robot_sim.launch  sim.launch  sim_setup.launch  tool_perception.launch
saphari_robot_bringup/scripts/: delete_mongo_roslog.sh  export_mongo_roslog.sh
saphari_robot_description/: CMakeLists.txt  package.xml  urdf.rviz
saphari_robot_description/launch/: display.launch  upload.launch
saphari_robot_description/meshes/: Screen.dae  Screen2.dae  WSG50_110.stl  arm_base.dae  arm_seg_1.dae  arm_seg_2.dae  arm_seg_3.dae  arm_seg_4.dae  blackfly_adaptor.stl  blackfly_camera.stl  bottom_protector.dae  bottom_protector.stl  camera_mount_blackfly.dae  camera_mount_blackfly.stl  kinect_mounting_1_link.dae  kinect_mounting_2_link.dae  kinect_mounting_3_link.dae  kinect_mounting_4_link.dae  kinect_mounting_5_link.dae  saphari_basket.dae  saphari_wall.dae  screenholder_1_link.dae  screenholder_2_link.dae  screenholder_3_link.dae  screenholder_4_link.dae  table.dae  table.stl  top_protector.dae  top_protector.stl
saphari_robot_description/urdf/: saphari_map.urdf.xacro  saphari_robot_description.urdf.xacro  saphari_setup_description.urdf.xacro  saphari_table.urdf.xacro
saphari_task_executive/: CMakeLists.txt  package.xml  saphari-humans-processing.asd  saphari-task-executive.asd
saphari_task_executive/config/: semrec_config.cfg
saphari_task_executive/launch/: logging_pipeline.launch  task_executive.launch
saphari_task_executive/msg/: ObjectInstanceDescription.msg  ObjectTypeDescription.msg  SlotDescription.msg  SlotGoalDescription.msg  SlotStateDescription.msg  State.msg  TaskState.msg
saphari_task_executive/src/: arm-control.lisp  conversions.lisp  designator-reasoning.lisp  designator-utils.lisp  human-perception.lisp  knowrob-queries.lisp  knowrob-utils.lisp  lisp-utils.lisp  logging-utils.lisp  main.lisp  marker-viz.lisp  package.lisp  plans.lisp  tf.lisp  tool-perception.lisp
saphari_task_executive/src/saphari-humans-processing/: humans-filtering.lisp  humans-viz.lisp  package.lisp
saphari_task_executive/src/saphari_task_executive/: fast_humans_viz.cpp  humans_tf_publisher.cpp
saphari_task_executive/srv/: RequestState.srv
saphari_task_requirements_list/: .gitignore  CMakeLists.txt  package.xml  readme.txt
saphari_task_requirements_list/action/: Perception.action  Slot.action
saphari_task_requirements_list/msg/: Item.msg  ItemInfo.msg  ItemState.msg  ItemStatus.msg  ItemTarget.msg  TaskList.msg  TaskState.msg
saphari_task_requirements_list/res/: task_list.json
saphari_task_requirements_list/src/: action_client.py  action_server.py  generate_target_list.py
saphari_tool_detector/: CMakeLists.txt  README.md  package.xml
saphari_tool_detector/calib/: calib_12351127.ini  calib_12351127.yaml  calib_15296932.ini  calib_15296932.yaml  calib_15296932_fujinon.ini  calib_15296932_fujinon.yaml  calib_15296932_mucron.yaml  calib_15360637.ini  calib_15360637.yaml
saphari_tool_detector/data/: .gitignore
saphari_tool_detector/launch/: camera.launch  detector.launch
saphari_tool_detector/msg/: Tool.msg
saphari_tool_detector/src/: detect_tools.cpp  intersection.cpp  intersection.h  perception.cpp  perception.h  receiver.cpp  receiver.h  train_confidence.cpp  train_tool.cpp  visualizer.cpp  visualizer.h
saphari_tool_detector/srv/: DetectTools.srv
