<?xml version="1.0"?>
<package format="2">
  <name>saphari_kinect_server</name>
  <version>0.0.1</version>
  <description>
    Wrapper around OpenNI-Tracker publishing saphari_msgs and tf-msgs.
  </description>

  <author email="who.knows@where.com">Emanuele Magrini</author>
  <author email="who.knows@where.com">Matteo Saveriano</author>
  <maintainer email="who.knows@where.com">Emanuele Magrini</maintainer>
  <maintainer email="who.knows@where.com">Matteo Saveriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>openni_camera</depend>
  <depend>tf</depend>
  <depend>saphari_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libopenni-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libopenni-nite-dev</depend>
  <depend>libopenni-sensor-primesense-dev</depend>

  <export>
    <nodelet plugin="${prefix}/kinect_nodelet_plugins.xml" />
  </export>
</package>
