<?xml version="1.0"?>
<package>
  <name>saphari_robot_bringup</name>
  <version>0.0.1</version>
  <description>
    Collection of launch-files and configs to start the saphari robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>saphari_robot_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>dlr_action_bridge</run_depend>
  <run_depend>iai_wsg_50_description</run_depend>
  <run_depend>loopback_controller_manager</run_depend>

  <export>

  </export>
</package>
