<?xml version="1.0"?>
<package>
  <name>saphari_robot_description</name>
  <version>0.0.1</version>
  <description>
    Description of the robot used in the final review of the SAPHARI project.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>iai_kuka_lwr4_description</run_depend>
  <run_depend>iai_adapters_description</run_depend>
  <run_depend>iai_wsg_50_description</run_depend>

  <export>

  </export>
</package>
