<?xml version="1.0"?>
<package>
  <name>saphari_task_executive</name>
  <version>0.0.1</version>
  <description>
    Source-code, launch-files, and config-files for the task executive
    of the final year saphari review.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>semrec</run_depend>

  <export>

  </export>
</package>
